# psztneuro

./: pyproject.toml
psztneuro/: __main__.py  core.py
