[tool.poetry]
name = "psztneuro"
version = "0.1.0"
description = ""
authors = ["Michał Rokita <mrokita@mrokita.pl>"]

[tool.poetry.dependencies]
python = "^3.9.1"
tqdm = "^4.56.0"
sklearn = "^0.0"
numpy = "^1.19.5"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
